# mypage

./: .dockerignore  .gitattributes  .gitignore  .replit  CNAME  Dockerfile  README.md  app.py  css-test.css  css-test.html  device_guide.html  help_turtle.css  help_turtle.html  index.css  index.html  ohsi.html  others.html  pyproject.toml  robots.txt  sitemap.xml  sns.html  supabase_client.py  templates_config.py
ohsi/: etc_female.html  ohsi.html  ohsi_pjsk.html  ohsi_pjsk_male.html  pjsk_female.html  pjsk_male.html
routers/: license.py
static/: index.css  script.js  style.css
static/css/: base.css  fonts.css  index.css  license.css  style.css
static/css/help/: dollimpan.css
static/css/license/: index.css
static/css/license/wppengine/: index.css  shiro.css
static/css/shared/: button-layout.css
static/css/templates/help/: dollimpan.css
static/css/templates/license/: index.css
static/css/templates/license/wppengine/: index.css  shiro.css
static/favicon/: site.webmanifest
static/js/: footer.js
templates/: base.html  index.html
templates/help/: dollimpan.html
templates/license/: index.html
templates/license/7bg/: index.html
templates/license/wallpaperengine/: base.html  index.html
templates/license/wppengine/: index.html  shiro.html
templates/ohsi/: etc_female.html  pjsk_female.html
templates/static/: script.js
